Fixed height issue and overflow issue on project + Added about page on to sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     font-family: "IBM Plex Sans", sans-serif;
     display: flex;
     height: 100vh;
+    height: 100dvh;
     width: 100%;
 }
 
